# azure-sdk-for-cpp

./: CMakeLists.txt
samples/integration/third-party-app-using-same-json-lib/: CMakeLists.txt
samples/integration/third-party-app-using-same-json-lib/src/: main.cpp  mainE.cpp
sdk/core/azure-core-test/: CMakeLists.txt
sdk/core/azure-core-test/inc/azure/core/test/: interceptor_manager.hpp  network_models.hpp  test_base.hpp
sdk/core/azure-core-test/src/: record_policy.cpp  recorded_data.cpp
sdk/core/azure-core/src/http/curl/: curl.cpp
sdk/core/azure-core/test/nlohmann-json-test/: CMakeLists.txt
sdk/core/azure-core/test/nlohmann-json-test/src/: unit-algorithms.cpp  unit-allocator.cpp  unit-alt-string.cpp  unit-bson.tcpp  unit-capacity.cpp  unit-cbor.cpp  unit-cbor.tcpp  unit-class_const_iterator.cpp  unit-class_iterator.cpp  unit-class_lexer.cpp  unit-class_parser.cpp  unit-comparison.cpp  unit-concepts.cpp  unit-constructor1.cpp  unit-constructor2.cpp  unit-convenience.cpp  unit-conversions.cpp  unit-conversions.tcpp  unit-deserialization.cpp  unit-deserialization.tcpp  unit-element_access1.cpp  unit-element_access2.cpp  unit-inspection.tcpp  unit-items.cpp  unit-iterators1.tcpp  unit-iterators2.cpp  unit-json_patch.tcpp  unit-json_pointer.tcpp  unit-large_json.cpp  unit-merge_patch.tcpp  unit-meta.cpp  unit-meta.tcpp  unit-modifiers.tcpp  unit-msgpack.tcpp  unit-pointer_access.tcpp  unit-readme.tcpp  unit-reference_access.tcpp  unit-regression.cpp  unit-regression.tcpp  unit-serialization.tcpp  (+6 more)
sdk/core/azure-core/test/ut/: curl_session_test.cpp  json.cpp  transport_adapter_base.hpp
sdk/storage/azure-storage-common/src/: storage_exception.cpp
(+3 files in other folders)
